--- a/GeoQuiz/app/src/main/res/values/strings.xml
+++ b/GeoQuiz/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
     <string name="app_name">GeoQuiz</string>
-    <string name="true_button">True</string>
-    <string name="false_button">False</string>
-    <string name="next_button">Next</string>
+    <string name="true_button">TRUE</string>
+    <string name="false_button">FALSE</string>
+    <string name="next_button">NEXT</string>
     <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">Incorrect!</string>
+    <string name="previous_button">PREV</string>
 
-    <string name="question_oceans">The Pacific Ocean is larger than
-    the Atlantic Ocean.</string>
+    <string name="question_oceans">Тихий океан больше Атлантического океана.</string>
   <string name="question_mideast">The Suez Canal connects the Red Sea
     and the Indian Ocean.</string>
   <string name="question_africa">The source of the Nile River is in Egypt.
